# GoBang_Battle

./: .gitgnore  CMakeLists.txt  README.md  main.cpp
include/: board.h  bot_mms.h  game.h  player.h  robot1.h  robot2.h  strategy.h  value_agent.h
src/: board.cpp  bot_mms.cpp  game.cpp  player.cpp  robot1.cpp  robot2.cpp  strategy.cpp  value_agent.cpp
